--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-tree": "^1.0.0-alpha.29",
     "gonzales-pe": "^4.2.4",
     "js-beautify": "^1.10.0",
+    "lodash": "^4.17.11",
     "query-ast": "^1.0.2",
     "react": "^16.8.6",
     "react-codemirror": "^1.0.0",
