--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "scss-parser": "^1.0.3"
   },
