--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "start": "webpack-dev-server --devtool eval --progress --colors --content-base build",
     "test": "node scripts/test.js --env=jsdom",
     "coverage": "yarn run test -- --coverage",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@storybook/addon-actions": "^5.2.4",
+    "@storybook/addon-docs": "^5.2.4",
+    "@storybook/addon-links": "^5.2.4",
+    "@storybook/addon-notes": "^5.2.4",
+    "@storybook/addon-storysource": "^5.2.4",
+    "@storybook/react": "^5.2.3",
+    "@storybook/theming": "^5.2.3",
     "axios": "^0.19.0",
     "calidators": "^3.0.2",
     "codemirror-colorpicker": "^1.9.50",
@@ -27,13 +35,16 @@
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
+    "react-id-swiper": "^2.3.2",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "scss-parser": "^1.0.3"
+    "scss-parser": "^1.0.3",
+    "storybook-react-router": "^1.0.8",
+    "swiper": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
