--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-jest": "^24.7.1",
     "babel-loader": "8.0.4",
     "babel-polyfill": "^6.26.0",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^2.1.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
