--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "css-tree": "^1.0.0-alpha.29",
     "date-fns": "^2.2.1",
     "gonzales-pe": "^4.2.4",
+    "jest": "^24.7.1",
+    "jest-junit": "^8.0.0",
     "js-beautify": "^1.10.0",
     "lodash": "^4.17.11",
     "query-ast": "^1.0.2",
@@ -71,7 +73,6 @@
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.7.1",
     "less-loader": "^4.1.0",
     "node-sass": "^4.11.0",
     "react-hot-loader": "^4.6.3",
@@ -83,6 +84,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "jest": {
+    "reporters": [ "default", "jest-junit" ],
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
     ],
