--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "jest": {
-    "reporters": ["jest-junit"],
+    "reporters": ["default","jest-junit"],
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
     ],
