add codecov to CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs: # a collection of steps
           path: coverage
           prefix: coverage
       - codecov/upload:
-          file: coverage
+          file: ./coverage/clover.xml
           token: 'e50f85c6-56d5-40b7-8c2d-1a44d96cd9e8'
       - run: sudo apt-get update && sudo apt-get install -y python-dev
       - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
