--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,27 +9,27 @@ jobs: # a collection of steps
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
       - run:
-          name: update-npm
+          name: Update npm
           command: 'sudo npm install -g npm@latest'
       - restore_cache: # special step to restore the dependency cache
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
-          name: install
+          name: npm install
           command: npm install
       - save_cache: # special step to save the dependency cache
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
       - run: # run tests
-          name: test
+          name: npm test
           command: npm test
       - store_test_results:
           path: ./test-results
       - store_artifacts:
           path: ./test-results
       - run: # run coverage report
-          name: code-coverage
+          name: Code Coverage
           command: npm run coverage
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
           path: coverage
@@ -37,10 +37,21 @@ jobs: # a collection of steps
       - codecov/upload:
           file: ./coverage/clover.xml
           token: 'e50f85c6-56d5-40b7-8c2d-1a44d96cd9e8'
-      - run: sudo apt-get update && sudo apt-get install -y python-dev
-      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
-      - run: sudo python get-pip.py
-      - run: sudo pip install awscli --upgrade
-      - run: aws --version
-      - run: aws s3 ls
-      - run: npm run deploy
+      - run: 
+        name: Install Python
+        command: sudo apt-get update && sudo apt-get install -y python-dev
+      - run: 
+        name: Download pip
+        command: sudo curl -O https://bootstrap.pypa.io/get-pip.py
+      - run: 
+        name: Install pip
+        command: sudo python get-pip.py
+      - run: 
+        name: Upgrade aws-cli
+        command: sudo pip install awscli --upgrade
+      - run: 
+        name: Check AWS
+        command: aws --version && aws s3 ls
+      - run: 
+        name: Deploy
+        command: npm run deploy
