--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,10 +39,10 @@ jobs: # a collection of steps
           token: 'e50f85c6-56d5-40b7-8c2d-1a44d96cd9e8'
       - run: 
         name: Install Python
-        command: sudo apt-get update && sudo apt-get install -y python-dev
+        command: 'sudo apt-get update && sudo apt-get install -y python-dev'
       - run: 
         name: Download pip
-        command: sudo curl -O https://bootstrap.pypa.io/get-pip.py
+        command: 'sudo curl -O https://bootstrap.pypa.io/get-pip.py'
       - run: 
         name: Install pip
         command: sudo python get-pip.py
@@ -51,7 +51,7 @@ jobs: # a collection of steps
         command: sudo pip install awscli --upgrade
       - run: 
         name: Check AWS
-        command: aws --version && aws s3 ls
+        command: 'aws --version && aws s3 ls'
       - run: 
         name: Deploy
         command: npm run deploy
