--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,27 +31,27 @@ jobs: # a collection of steps
       - run: # run coverage report
           name: Code Coverage
           command: npm run coverage
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
+      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: coverage
           prefix: coverage
       - codecov/upload:
           file: ./coverage/clover.xml
           token: 'e50f85c6-56d5-40b7-8c2d-1a44d96cd9e8'
-      - run: 
-        name: Install Python
-        command: 'sudo apt-get update && sudo apt-get install -y python-dev'
-      - run: 
-        name: Download pip
-        command: 'sudo curl -O https://bootstrap.pypa.io/get-pip.py'
-      - run: 
-        name: Install pip
-        command: sudo python get-pip.py
-      - run: 
-        name: Upgrade aws-cli
-        command: sudo pip install awscli --upgrade
-      - run: 
-        name: Check AWS
-        command: 'aws --version && aws s3 ls'
-      - run: 
-        name: Deploy
-        command: npm run deploy
+      - run:
+          name: Install Python
+          command: 'sudo apt-get update && sudo apt-get install -y python-dev'
+      - run:
+          name: Download pip
+          command: 'sudo curl -O https://bootstrap.pypa.io/get-pip.py'
+      - run:
+          name: Install pip
+          command: 'sudo python get-pip.py'
+      - run:
+          name: Upgrade aws-cli
+          command: 'sudo pip install awscli --upgrade'
+      - run:
+          name: Check AWS
+          command: 'aws --version && aws s3 ls'
+      - run:
+          name: Deploy
+          command: 'npm run deploy'
