--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@storybook/react": "^5.2.3",
     "@storybook/theming": "^5.2.3",
     "axios": "^0.19.0",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "calidators": "^3.0.2",
     "codemirror-colorpicker": "^1.9.50",
     "console-feed": "^2.8.8",
     "css-tree": "^1.0.0-alpha.29",
     "date-fns": "^2.2.1",
+    "enzyme-to-json": "^3.4.3",
     "gonzales-pe": "^4.2.4",
     "jest": "^24.7.1",
     "jest-junit": "^8.0.0",
@@ -43,6 +45,7 @@
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-test-renderer": "^16.11.0",
     "redux": "^4.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
@@ -57,6 +60,7 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-storyshots": "^5.2.5",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.7.1",
