--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs: # a collection of steps
             - ./node_modules
       - run: # run tests
           name: npm test
-          command: npm test
+          command: npm test -u
       - store_test_results:
           path: ./test-results
       - store_artifacts:
