--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "less-loader": "^4.1.0",
     "node-sass": "^4.11.0",
     "react-hot-loader": "^4.6.3",
+    "require-context.macro": "^1.2.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
