--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "coverage": "yarn run test -- --coverage",
     "build": "webpack --mode production",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "deploy": "npm run build && aws s3 sync dist/ s3://codio-website --delete",
+    "deploy": "npm run build && aws s3 sync dist/ s3://www.codio.team --delete",
     "test-ci": "JEST_JUNIT_OUTPUT=\"reports/junit/js-test-results.xml\" jest --maxWorkers=2 --ci"
   },
   "author": "",
