--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,10 @@
 version: 2.1 # use CircleCI 2.1
 orbs:
   codecov: codecov/codecov@1.0.5
+machine:
+  environment:
+    API_URL: $API_URL
+    imgurClient: $imgurClient
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
     working_directory: ~/codio-website # directory where steps will run
