--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ jobs: # a collection of steps
       - image: circleci/node:10.16.3 # ...with this image as the primary container; this is where all `steps` will run
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
+      - echo:
+        name: "echo env variable"
+        command: echo ${API_URL}
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
@@ -21,6 +24,9 @@ jobs: # a collection of steps
       - run:
           name: npm install
           command: npm install
+          environment:
+            API_URL: $API_URL
+            imgurClient: $imgurClient
       - save_cache: # special step to save the dependency cache
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
@@ -59,3 +65,6 @@ jobs: # a collection of steps
       - run:
           name: Deploy
           command: 'npm run deploy'
+          environment:
+            API_URL: $API_URL
+            imgurClient: $imgurClient
