--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs: # a collection of steps
     docker: # run the steps with Docker
       - image: circleci/node:10.16.3 # ...with this image as the primary container; this is where all `steps` will run
     environment:
-      API_URL: $API_URL
-      imgurClient: $imgurClient
+      API_URL: API_URL
+      imgurClient: imgurClient
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
       - run:
