--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,22 +24,22 @@ jobs: # a collection of steps
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
-      - run: # run tests
-          name: npm test
-          command: npm test
-      - store_test_results:
-          path: ./test-results
-      - store_artifacts:
-          path: ./test-results
-      - run: # run coverage report
-          name: Code Coverage
-          command: npm run coverage
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: coverage
-          prefix: coverage
-      - codecov/upload:
-          file: ./coverage/clover.xml
-          token: 'e50f85c6-56d5-40b7-8c2d-1a44d96cd9e8'
+      # - run: # run tests
+      #     name: npm test
+      #     command: npm test
+      # - store_test_results:
+      #     path: ./test-results
+      # - store_artifacts:
+      #     path: ./test-results
+      # - run: # run coverage report
+      #     name: Code Coverage
+      #     command: npm run coverage
+      # - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
+      #     path: coverage
+      #     prefix: coverage
+      # - codecov/upload:
+      #     file: ./coverage/clover.xml
+      #     token: 'e50f85c6-56d5-40b7-8c2d-1a44d96cd9e8'
       - run:
           name: Install Python
           command: 'sudo apt-get update && sudo apt-get install -y python-dev'
