--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@progress/kendo-drawing": "^1.6.0",
+    "@progress/kendo-react-pdf": "^3.9.0",
     "@storybook/addon-actions": "^5.2.4",
     "@storybook/addon-docs": "^5.2.4",
     "@storybook/addon-links": "^5.2.4",
