--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@storybook/addon-storysource": "^5.2.4",
     "@storybook/react": "^5.2.3",
     "@storybook/theming": "^5.2.3",
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "babel-plugin-require-context-hook": "^1.0.0",
     "calidators": "^3.0.2",
@@ -45,10 +46,12 @@
     "react-dropzone": "^10.2.0",
     "react-icons": "^3.7.0",
     "react-id-swiper": "^2.3.2",
+    "react-notifications-component": "^2.2.3",
     "react-redux": "^7.0.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.11.0",
+    "react-websocket": "^2.1.0",
     "redux": "^4.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
