--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest-junit": "^8.0.0",
     "js-beautify": "^1.10.0",
     "lodash": "^4.17.11",
+    "node-fetch": "^2.6.0",
     "query-ast": "^1.0.2",
     "rc-progress": "^2.5.2",
     "react": "^16.10.2",
@@ -83,6 +84,7 @@
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "fetch-mock": "^8.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^4.1.0",
