--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react-dom": "^16.11.0",
     "react-dropzone": "^10.2.0",
     "react-icons": "^3.7.0",
-    "react-id-swiper": "^2.3.2",
+    "react-id-swiper": "2.3.2",
     "react-notifications-component": "^2.2.3",
     "react-redux": "^7.0.3",
     "react-router": "^5.1.2",
